force-app/main/default/objects/Account/fields/FormulaField__c.field-meta.xml
<CustomField>
    <fullName>FormulaField__c</fullName>
    <formula>&quot;By formula - then: &quot; &amp; NewfieldTxt255__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaField</label>
    <type>Text</type>
</CustomField>