force-app/main/default/objects/Account/fields/NewfieldTxt255__c.field-meta.xml
<CustomField>
    <fullName>NewfieldTxt255__c</fullName>
    <label>NewfieldTxt255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>