force-app/main/default/objects/Account/fields/NewfieldTxt40__c.field-meta.xml
<CustomField>
    <fullName>NewfieldTxt40__c</fullName>
    <label>NewfieldTxt40</label>
    <length>40</length>
    <type>Text</type>
</CustomField>