force-app/main/default/objects/Account/fields/NewNumberField__c.field-meta.xml
<CustomField>
    <fullName>NewNumberField__c</fullName>
    <label>NewNumberField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>